# prefolds

./: .gitignore  prefolds.cabal  readme.md  stack.yaml
app/: Bench.hs  Main.hs  Unit.hs
bench/: Main.hs
src/: Core.hs  Fold.hs  Lib.hs  Prefolds.hs  Pure.hs  Stepper.hs
src/Data/Strict/: Drive.hs  Maybe.hs  Pair.hs  Tuple.hs
src/Experiment/: SimpleStepper.hs  Stepper.hs
src/Fold/: Core.hs  Pure.hs
src/Unfold/: Core.hs  Pure.hs
test/: Main.hs
