name:                prefolds
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/effectfully/prefolds
license:             BSD3
license-file:        LICENSE
author:              effectfully
maintainer:          effectfully@gmail.com
copyright:           2016
category:            Control
build-type:          Simple
extra-source-files:  readme.md
cabal-version:       >=1.10

library
  hs-source-dirs:
      src
  exposed-modules:
      Lib
    , Pure
    , Fold
  build-depends:
      base >= 4.7 && < 5
    , comonad
    , transformers
  default-language:
      Haskell2010
  GHC-Options:
      -O2
  
executable prefolds-exe
  hs-source-dirs:
      app
  main-is:
      Main.hs
  build-depends:
      base
    , prefolds
    , transformers
    , criterion >= 1.1.4.0
  ghc-options:
      -O2
      -threaded
      -rtsopts
      -with-rtsopts=-N
  default-language:
      Haskell2010
  
source-repository head
  type:     git
  location: https://github.com/effectfully/prefolds
