name:                prefolds
version:             0.1.0.0
synopsis:            Composable short-circuiting streaming folds.
description:         Please see readme.md
homepage:            https://github.com/effectfully/prefolds
license:             BSD3
license-file:        LICENSE
author:              effectfully
maintainer:          effectfully@gmail.com
copyright:           2016
category:            Control
build-type:          Simple
extra-source-files:  readme.md
cabal-version:       >=1.10

library
  hs-source-dirs:
      src
  exposed-modules:
      Data.Strict.Tuple
    , Data.Strict.Maybe
    , Data.Strict.Drive
    , Lib
    , Prefolds
  other-modules:
      Fold.Pure
    , Fold.Core
    , Unfold.Pure
    , Unfold.Core
  build-depends:
      base
    , comonad
    -- I have no idea why haskell-mode requires this.
    , criterion
    , mmorph
    , transformers
  default-language:
      Haskell2010
  GHC-Options:
      -O2
  
test-suite prefolds-test
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test
  main-is:
      Main.hs
  build-depends:
      base
    , mmorph
    , prefolds
    , transformers
  ghc-options:
      -O2
  default-language:
      Haskell2010

Benchmark prefolds-bench
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      bench
  main-is:
      Main.hs
  build-depends:
      base
    , criterion
    , mmorph
    , prefolds
    , transformers
  ghc-options:
      -O2
      -rtsopts
  default-language:
      Haskell2010
    
source-repository head
  type:     git
  location: https://github.com/effectfully/prefolds
